--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
+
 <head>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="./iconos/fontawesome-free-5.15.3-web/css/all.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PedimonYa!</title>
 </head>
+
 <body>
     <header class="header">
         <nav class="navbar">
@@ -25,7 +27,8 @@
         <div class="contenedor-header">
             <div class="info-pedimonya">
                 <img class="img-pedimon" src="./img/pedimon-text.png" alt="">
-                <h3>Buscá tu pokemon favorito y disfruta de los beneficios de tener un bicho de estos en tu casa! Hay como cinco millones para coleccionar loquita!</h3>
+                <h3>Buscá tu pokemon favorito y disfruta de los beneficios de tener un bicho de estos en tu casa! Hay
+                    como cinco millones para coleccionar loquita!</h3>
                 <button class="btn-atrapar">Los quiero atrapar</button>
             </div>
             <div class="contenedor-pikachu-img">
@@ -56,9 +59,75 @@
             </div>
 
         </section>
+
+        <section class="list-pedis">
+            <h2 class="title-list-pedis">Aca va la lista de los Pedís!</h2>
+
+            <div class="conteiner-cards">
+                <div class="fila-pokemones">
+                    <div class="cards">
+                        <img src="./img/balbasaur.png" alt="">
+                        <h5 class="name-pokemon">La tortuga nashe</h5>
+                        <h5 class="price-pokemon">$120</h5>
+                        <button class="btn-comprar">Comprar</button>
+                    </div>
+
+
+                    <div class="cards">
+                        <img src="./img/squirtle.png" alt="">
+                        <h5 class="name-pokemon">Vamo a calmarno</h5>
+                        <h5 class="price-pokemon">$758</h5>
+                        <button class="btn-comprar">Comprar</button>
+                    </div>
+
+
+                    <div class="cards">
+                        <img src="./img/gengar.png" alt="">
+                        <h5 class="name-pokemon">Wachin</h5>
+                        <h5 class="price-pokemon">$912</h5>
+                        <button class="btn-comprar">Comprar</button>
+                    </div>
+                </div>
+
+
+                <div class="fila-pokemones">
+                    <div class="cards">
+                        <img src="./img/balbasaur.png" alt="">
+                        <h5 class="name-pokemon">La tortuga nashe</h5>
+                        <h5 class="price-pokemon">$120</h5>
+                        <button class="btn-comprar">Comprar</button>
+                    </div>
+
+
+                    <div class="cards">
+                        <img src="./img/squirtle.png" alt="">
+                        <h5 class="name-pokemon">Vamo a calmarno</h5>
+                        <h5 class="price-pokemon">$758</h5>
+                        <button class="btn-comprar">Comprar</button>
+                    </div>
+
+
+                    <div class="cards">
+                        <img src="./img/gengar.png" alt="">
+                        <h5 class="name-pokemon">Wachin</h5>
+                        <h5 class="price-pokemon">$912</h5>
+                        <button class="btn-comprar">Comprar</button>
+                    </div>
+                </div>
+
+
+            </div>
+
+
+
+
+
+
+        </section>
     </main>
 
     <footer></footer>
 
 </body>
+
 </html>
